  logged so that a user can diagnose problems with them
- added compatibility mode for -a, -o and -p options
- MILESTONE: compatibility mode processing finished
- changed default file output format to include high-precision timestamps
- added a buid-in template for previous syslogd file format
- added new $ActionFileDefaultTemplate directive
---------------------------------------------------------------------------
Version 3.12.4 (rgerhards), 2008-03-25
- Greatly enhanced rsyslogd's file write performance by disabling
  file syncing capability of output modules by default. This
  feature is usually not required, not useful and an extreme performance
  hit (both to rsyslogd as well as the system at large). Unfortunately,
  most users enable it by default, because it was most intuitive to enable
  it in plain old sysklogd syslog.conf format. There is now the
  $ActionFileEnableSync config setting which must be enabled in order to
  support syncing. By default it is off. So even if the old-format config
  lines request syncing, it is not done unless explicitely enabled. I am
  sure this is a very useful change and not a risk at all. I need to think
  if I undo it under compatibility mode, but currently this does not
  happen (I fear a lot of lazy users will run rsyslogd in compatibility
  mode, again bringing up this performance problem...).
- added flow control options to other input sources
- added $HHOUR and $QHOUR system properties - can be used for half- and
  quarter-hour logfile rotation
- changed queue's discard severities default value to 8 (do not discard)
  to prevent unintentional message loss
- removed a no-longer needed callback from the output module 
  interface. Results in reduced code complexity.
- bugfix/doc: removed no longer supported -h option from man page
- bugfix: imklog leaked several hundered KB on each HUP. Thanks to
  varmojfekoj for the patch
- bugfix: potential segfault on module unload. Thanks to varmojfekoj for
  the patch